# RepoLume

./: .dockerignore  .env.example  .gitignore  .npmignore  .vercelignore  CONTRIBUTING.md  Dockerfile  Dockerfile-litellm  Dockerfile-ollama-local  LICENSE  Makefile  NOTICE  README.kr.md  README.md  SECURITY.md  docker-compose-litellm.env.example  docker-compose.yml  eslint.config.mjs  fix_script.py  localwiki-agent  next.config.ts  package-lock.json  package.json  patch_wiki_viewer.py  patch_wiki_viewer_fixed.py  playwright.config.ts  pnpm-lock.yaml  scratch_test_wiki_out.py  setup-mcp.sh  test_mcp_inject.py  test_mermaid.js  test_prompt.txt  test_pydantic.py  test_regen.ts  tsconfig.json  update_mermaid.py  update_wiki.py  vercel.json
api/: README.md  agent_runner.py  api.py  background_jobs.py  bedrock_client.py  config.py  data_pipeline.py  desktop_entry.py  events.py  localwiki-api.spec  logging_config.py  main.py  openrouter_client.py  prompts.py  provider_lanes.py  pyproject.toml  rag.py  repolume-api.spec  scratch_affiliate_admin.md  scratch_affiliate_backend.md  scratch_api_gateway.md  scratch_batch_settlement.md  scratch_event_driven.md  scratch_integration_api.md  server.py  simple_chat.py  task_streams.py  test_scenarios.py  websocket_wiki.py  wiki_rag.py
api/chat/: __init__.py  handler.py  models.py  prompt_builder.py  provider_dispatcher.py  validator.py
api/config/: embedder.json  generator.json
api/db/: __init__.py  generation_jobs.py  schema.sql  store.py
api/graphify-out/: manifest.json
api/routes/: __init__.py  admin.py  benchmark.py  cache.py  (+11 more)
(+483 files in other folders)
